# r-yaml12

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  YAML_TEST_SUITE_TASKS.md  _pkgdown.yml  authors.html  authors.md  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: extendr-wrappers.R  wrappers.R
articles/: benchmarks.html  benchmarks.md  index.html  index.md  yaml-2-minute-intro.html  yaml-2-minute-intro.md  yaml-tags-and-advanced-features.html  yaml-tags-and-advanced-features.md
articles/articles/: benchmarks.html
dev/: AGENTS.html  AGENTS.md  LICENSE-text.html  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
dev/articles/: benchmarks.html  benchmarks.md  index.html  index.md  yaml-2-minute-intro.html  (+3 more)
inst/: AUTHORS
man/: encode_yaml.Rd  format_yaml.Rd  hello_world.Rd  parse_yaml.Rd  read_yaml.Rd  write_yaml.Rd
news/: index.html  index.md
notes/: parse-yaml-unwind-investigation.md
reference/: format_yaml.html  index.html  parse_yaml.html
src/: Makevars.win.in  entrypoint.c  init.c
src/rust/: Cargo.toml  api.h  vendor-authors.R  vendor-config.toml  vendor.tar.xz
src/rust/src/: handlers.rs  lib.rs  r.rs  r_ext.rs  r_to_yaml.rs  timestamp.rs  unwind.rs  warning.rs  yaml_to_r.rs
tools/: benchmark-savvy-port.R  generate-entrypoints.R  patch-savvy-init.R  windows-rust-target.R
vignettes/: yaml-2-minute-intro.Rmd  yaml-tags-and-advanced-features.Rmd
(+21 files in other folders)
